# Tilengine

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  build_output.txt  configure.bat  vcpkg.json
.github/workflows/: ci.yml
docs/: quick_guide.md
include/: crc32.c  crc32.h  md5.h  simplexml.h
samples/: Actor.c  Actor.h  Barrel.c  Benchmark.c  Boss.c  Boss.h  CMakeLists.txt  ColorCycle.c  Drawbridge.c  Drawbridge.h  Enemy.c  Enemy.h  Explosion.c  Explosion.h  Forest.c  Hud.c  Hud.h  Intro.c  LayerCircle.c  LayerWindow.c  Makefile  Mode7.c  PaletteLayer.c  PaletteLayer.h  Pillar.c  Pillar.h  Platformer.c  Prop.c  Prop.h  QueryLayer.c  Racer.c  Racer.h  Sandblock.c  Sandblock.h  Scaling.c  Shadow.c  Ship.c  Ship.h  Shooter.c  Shooter.h  (+10 more)
samples/assets/sc4/: blocks.sqx  colission.tsx  drawbridge_bg.tmx  drawbridge_bg.tsx  drawbridge_drawbridge.tmx  drawbridge_fg.tsx  drawbridge_fg0.tmx  drawbridge_fg1.tmx  drawbridge_fg2.tmx  drawbridge_intro1.tmx  drawbridge_intro1.tsx  drawbridge_intro1.txt  drawbridge_intro2.tmx  drawbridge_intro2.tsx  drawbridge_intro3.tmx  drawbridge_intro3.tsx  drawbridge_main.tmx  drawbridge_main.tsx  drawbridge_mg.tmx  drawbridge_mg.tsx  drawbridge_mg_0.tmx  drawbridge_mg_0.tsx  drawbridge_mg_tileset.tsx  drawbridge_rocks.tmx  drawbridge_water.tmx  hud.tmx  hud.tsx  intro_pal0.txt  intro_pal2.txt  intro_pal3.txt  intro_pal4.txt  intro_pal5.txt  intro_pal6.txt  intro_palettes.txt  intro_ram.tmx  intro_ram.tsx  intro_ram.txt  intro_ram2.tmx  intro_ram2.tsx  intro_ram3.tmx  (+4 more)
sc4/: Barrel.c  CMakeLists.txt  Drawbridge.c  Drawbridge.h  Hud.c  Hud.h  Intro.c  Profiling.c  Profiling.h  Prop.c  Prop.h  Sandblock.c  Sandblock.h  Simon.c  Simon.h  SimonCollision.c  SimonCollision.h  Torch.c  Torch.h  Whip.c  Whip.h
sc4/assets/: drawbridge_main.tmx  drawbridge_main.tsx  drawbridge_rocks.tmx  drawbridge_water.tmx  drawbridge_water.tsx  simon_map.txt  simon_walk.sqx  simon_walk.txt  whip0.txt  whip0_map.txt  whip0_map0.txt
src/: Animation.c  Animation.h  Base64.c  Base64.h  Bitmap.c  Bitmap.h  Blitters.c  Blitters.h  DIB.h  Debug.h  Draw.c  Draw.h  Engine.h  Layer.c  Layer.h  List.c  List.h  LoadBitmap.c  LoadFile.c  LoadFile.h  LoadPalette.c  LoadSequencePack.c  LoadSpriteset.c  LoadTMX.c  LoadTMX.h  LoadTilemap.c  LoadTileset.c  Makefile  Math2D.c  Math2D.h  Object.c  Object.h  ObjectList.c  ObjectList.h  Palette.c  Palette.h  ResourcePacker.c  ResourcePacker.h  Sequence.c  Sequence.h  (+27 more)
test/: test_fps.c  test_layers.c  test_linescroll.c  test_pauseanimation.c  test_pivot.c  test_rotate.c  test_tiles.c  test_tilesets.c  test_window.c
